# Countries-ISO3166

./: Cargo.toml  README.md  deny.toml  test-lang.bcp47  test-single-lang.bcp47
.github/workflows/: docs_rs.yml  rust.yml
example_data/: BCP-47-Lang-Tags.json  test-lang-invalid.bcp47
src/: bcp47_language_info.rs  errors.rs  iso_3166_1.rs  lib.rs
src/bcp47/: language_info.rs  mod.rs  multi_lang_parser.rs  parser.rs  single_lang_parser.rs
