[package]
name = "countries-iso3166"
version = "1.1.0"
authors = ["448-OG <superuser@448.africa>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple Conversion for Country Codes and Names using ISO 3166"
categories = ["internationalization", "localization", "parsing"]
keywords = ["country-codes", "ISO-3166-1"]
homepage = "https://github.com/448-OG/Countries-ISO3166"
repository = "https://github.com/448-OG/Countries-ISO3166"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
